@@ -1,3 +1,6 @@
+rev 609 (2024-03-26) (krueschan)
+- minor change to country report table formatting
+
 rev 608 (2024-03-26) (krueschan)
 - minor change to country report title
 
